# vector-dbs

./: .env.example  .gitignore  README.md  chroma_add_query_docs.py  chroma_emb.py  chroma_persist.py  document_based_rag.py  main.py  openai_embedding.py  pinecone_intro.py  pyproject.toml
pg_vector/: basic_connection.py  enable_extension.sql  quick_demo.py
