[project]
name = "vector-dbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "pinecone>=9.0.1",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
]
